updated model names
